--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,13 @@ theme: just-the-docs
 
 url: https://OpenDriveDevelopment.github.io/OpenDrive-Documentation
 
+defaults:
+  - scope:
+      path: "docs" # an empty string here means all files in the project
+      type: "pages"
+    values:
+      layout: "default"
+
 aux_links:
   Template Repository: https://OpenDriveDevelopment.github.io/OpenDrive-Documentation
+  
