--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,9 @@ theme: just-the-docs
 
 url: https://OpenDriveDevelopment.github.io/OpenDrive-Documentation
 
+# Set a path/url to a logo that will be displayed instead of the title
+logo: "/assets/LogoOpenDrive.png"
+
 defaults:
   - scope:
       path: "docs" # an empty string here means all files in the project
