--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ theme: just-the-docs
 url: https://OpenDriveDevelopment.github.io/OpenDrive-Documentation
 
 # Set a path/url to a logo that will be displayed instead of the title
-logo: "/assets/LogoOpenDrive.png"
+logo: "/assets/FullLogoOpenDrive.png"
 
 defaults:
   - scope:
