--- a/_config.yml
+++ b/_config.yml
@@ -15,5 +15,5 @@ defaults:
       layout: "default"
 
 aux_links:
-  
+  View on Github: https://OpenDriveDevelopment.github.io/OpenDrive-Documentation
   
