--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ url: https://OpenDriveDevelopment.github.io/OpenDrive-Documentation
 # Set a path/url to a logo that will be displayed instead of the title
 logo: "/assets/FullLogoOpenDrive.png"
 
+# Color scheme supports "light" (default) and "dark"
 color_scheme: dark
 
 defaults:
