--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: OpendDrive Documentation
-description: OpenDrive Framework is an open-source project designed to accelerate the development of autonomous driving systems.
+title: OpenDrive Documentation
+description: OpenDrive is an open source framework for the development of self-driving systems.
 theme: just-the-docs
 
 url: https://OpenDriveDevelopment.github.io/OpenDrive-Documentation
